--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "antd": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
