--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "antd": "^5.3.0",
+    "dayjs": "^1.11.7",
+    "rc-scroll-anim": "^2.7.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
