--- a/package.json
+++ b/package.json
@@ -1,49 +1,57 @@
 {
-  "name": "dental-webapp",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "antd": "^5.3.0",
-    "dayjs": "^1.11.7",
-    "rc-scroll-anim": "^2.7.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.4.3",
-    "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
-    "react-spring": "^9.7.1",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "dental-webapp",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^13.0.0",
+        "@testing-library/user-event": "^13.2.1",
+        "@types/jest": "^27.0.1",
+        "@types/node": "^16.7.13",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
+        "antd": "^5.3.0",
+        "dayjs": "^1.11.7",
+        "rc-scroll-anim": "^2.7.6",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-dotenv": "^0.1.3",
+        "react-intersection-observer": "^9.4.3",
+        "react-router-dom": "^6.9.0",
+        "react-scripts": "5.0.1",
+        "react-spring": "^9.7.1",
+        "sass": "^1.62.0",
+        "typescript": "^4.4.2",
+        "web-vitals": "^2.1.0"
+    },
+    "scripts": {
+        "start": "react-dotenv && react-scripts start",
+        "build": "react-dotenv && react-scripts build",
+        "serve": "react-dotenv && serve build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "react-dotenv": {
+        "whitelist": [
+            "REACT_APP_GOOGLE_API_KEY"
+        ]
+    }
 }
