--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
         "dayjs": "^1.11.7",
         "rc-scroll-anim": "^2.7.6",
         "react": "^18.2.0",
+        "react-before-after-slider-component": "^1.1.8",
         "react-dom": "^18.2.0",
         "react-dotenv": "^0.1.3",
+        "react-flag-kit": "^1.1.1",
         "react-intersection-observer": "^9.4.3",
         "react-router-dom": "^6.9.0",
         "react-scripts": "5.0.1",
